--- a/css/main.css
+++ b/css/main.css
@@ -161,3 +161,56 @@ footer span {
 	color: #77a466;
 	font-size: 0.875em;
 }
+
+/*************** Media queries *****************/
+
+    /* Tablet styles here */
+@media all and (min-width:768px) {
+	
+	.bottom-section {
+		border-top: 1px solid #eee;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+		flex-basis: 30%;
+		border-top: none;
+
+	}
+
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 20px;
+	}
+}
+
+    /* Desktop styles here */
+@media all and (min-width:1200px) {
+
+	header {
+		justify-content: space-between;
+		margin-top: 20px;
+	}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 40%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+
+
+}
